# minecraft-in-a-week

./: .gitignore  .gitmodules  CMakeLists.txt  README.adoc
shaders/: block.frag  block.vert  quad.frag  quad.vert  selection.frag  selection.vert  shadow_map.frag  shadow_map.vert
src/: CMakeLists.txt  chunk.cpp  chunk.h  cube.cpp  cube.h  main.cpp  perlin.h  seeded_noise.h  world.h
src/opengl/: basic_mesh.cpp  basic_mesh.h  camera.cpp  camera.h  context.cpp  context.h  quad.h  shader.cpp  shader.h  window.cpp  window.h
